# movie_recommender_system_big_data

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
data_processing_pipeline/: data_processing.ipynb  enrich_details.py  erase_vectordb.py  indexer.py  search.py
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  Dashboard.jsx  MovieDetail.jsx  SearchPage.jsx  action.jsx
frontend/src/components/: Card.jsx  KafkaFeed.jsx  Nav.jsx  Recommendation.jsx
frontend/src/style/: dashboard.css  index.css
kafka_streaming/: consumer.py  producer.py  simulator.py  web_dashboard.py
kafka_streaming/templates/: index.html
spark_jobs/: collaborative_filtering.py
src/recsys/: __init__.py
src/recsys/search/: __init__.py  vector_db.py
src/recsys/streaming/: __init__.py  producer.py
